# pep723editor

./: .copier-answers.yml  .gitignore  .prettierignore  CLAUDE.md  README.md  RELEASE.md  Untitled.ipynb  install.json  package.json  pyproject.toml
.github/workflows/: build.yml  check-release.yml
pep723editor/: __init__.py  extension.py  handlers.py
schema/: plugin.json
src/: index.ts
